--- a/front-tourist-activities/src/css/components/header.css
+++ b/front-tourist-activities/src/css/components/header.css
@@ -12,6 +12,11 @@
     width: 100%;
 }
 
+.Header-title {
+    pointer-events: none;
+    font-family: var(--font-logo);
+}
+
 .bar {
     width: 100%;
     height: 4px;
@@ -26,8 +31,7 @@
     opacity: 1;
 }
 
-.Nav-perfil{
+.Nav-perfil {
     width: 26px;
     height: auto;
 }
-
