--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -10,7 +10,7 @@
     height: 60px;
     padding: 1rem;
     border-radius: 50%;
-    background-color: rgb(228, 228, 23);
+    background-color: rgb(177 77 77);
     border: none;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     display: flex;
@@ -52,13 +52,13 @@
 }
 
 .Selected-day {
-    color: rgb(221, 221, 221);
+    color: rgb(255, 255, 255);
     font-weight: 700;
-    background-color: blueviolet;
+    background-color: rgb(96, 157, 248);
 }
 
 .Slider-btn:hover {
-    background-color: rgb(148, 148, 202);
+    background-color: rgb(117, 147, 193);
 }
 
 
