--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -7,9 +7,13 @@
 }
 
 .WelcomePage-fondo{
-    height: 100vh;
+    /* position: absolute;
+    top: 0;
+    left: 0; */
+    min-height: 100vh;
     aspect-ratio: 16/9;
     object-fit: cover;
+    z-index: 0;
 }
 .WelcomePage-div {
     position: absolute;
