--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -82,6 +82,7 @@
     margin-bottom: 20px;
     font-weight: 500;
     display: flex;
+    font-size: 0.8rem;
     transition: color 0.5s ease-in-out;
 }
 
