--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -19,7 +19,7 @@
     position: absolute;
     bottom: 0;
     z-index: 2;
-    height: 40vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,7 +71,7 @@ font-size: 2rem;
     padding: 20px;
     background: linear-gradient(135deg, #3bdae3, #8ed0d3);
     border-radius: 2.5rem;
-    width: 120px;
+    width: auto;
     height: 60px;
     display: flex;
     align-items: center;
