--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -100,7 +100,7 @@
 
 /* mensaje flotante toast */
 
-.ToastMessage{
+.ToastMessage {
     position: fixed;
     top: 1rem;
     right: 1rem;
@@ -115,11 +115,26 @@
     animation-fill-mode: forwards;
 }
 
-@keyframes fadeInOut{
-    0%{opacity: 0; transform:translateY(-10px);}
-    10%{opacity: 1; transform:translateY(0);}
-    90%{opacity: 1; transform:translateY(0);}
-    100%{opacity: 0; transform:translateY(-10px);}
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    10% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    90% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
 
 }
 
