--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -125,7 +125,7 @@
     height: 120px;
     background-color: #f8f9fa;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 0.2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -173,7 +173,7 @@
     padding: var(--btn-padding);
     cursor: pointer;
     font-size: 1rem;
-    width: 190px;
+    width: auto;
     height: auto;
     transition: background-color 0.5s ease-in-out;
 }
