--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -223,16 +223,42 @@
 /* parte de la actividad seleccionada  */
 
 .ActividadSeleccionada {
+    position: relative;
     background-color: #fff;
     border-radius: 24px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
     padding: 2rem;
     margin: 2rem auto;
     border: 1px solid #f0f0f0;
+    width: 80%;
+}
+
+.ActividadSeleccionada-close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 3;
+    font-size: 1.5rem;
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-text-p);
+    transition: background-color 0.5s ease-in-out;
+}
+
+.ActividadSeleccionada-close:hover{
+    background-color: #fff;
 }
 
 .ActividadSeleccionada-h3 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: var(--color-text-p);
     margin-bottom: 1rem;
     font-weight: 600;
