--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -1,4 +1,5 @@
 .WelcomePage {
+    position: relative;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -14,6 +15,14 @@
     aspect-ratio: 16/9;
     object-fit: cover;
     z-index: 0;
+}
+.WelcomePage-logo{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
+    height: auto;
 }
 .WelcomePage-div {
     position: absolute;
