--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     box-shadow: var(--box-shadow);
-    height: 65vh;
+    height: auto;
     bottom: 0;
     left: 0;
     border-radius: 40px 40px 0 0;
