--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -143,7 +143,7 @@
 .Register-divLogin {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 20px 10px;
     font-size: 14px;
     gap: 20px;
