--- a/front-tourist-activities/src/css/components/footer.css
+++ b/front-tourist-activities/src/css/components/footer.css
@@ -12,7 +12,9 @@
     align-items: center;
     flex-direction: column;
     height: 10vh;
-    background-color: rgb(255, 255, 255);
+    /* color entre los dos colores linear gradient del fondo principal */
+    background-color: #fbfdfd;
+    
 }
 
 .Footer-nav {
