--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -6,6 +6,9 @@
     align-items: center;
     padding: 2rem;
     max-height: 100vh;
+    width: 100vw;
+    position: relative;
+    /*overflow: hidden;*/
     /* background-color: #f4f6f8; */
 }
 
@@ -17,6 +20,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    filter: blur(5px);
 }
 
 .Profile-card {
@@ -25,23 +29,33 @@
     justify-content: space-evenly;
     background-color: #fff;
     padding: 2rem;
-    border-radius: 24px;
+    border-radius: 16px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
     width: 100%;
     max-width: 420px;
-    height: 580px;
+    height: auto;
+    min-height: 450px;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
+.Profile-card:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+}
+
+
 .Profile-title {
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin-bottom: 1.5rem;
     color: var(--color-text-p);
     text-align: center;
+    font-weight: 600;
 }
 
 .Profile-form {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .Profile-nav {
@@ -50,7 +64,10 @@
     border: none;
     cursor: pointer;
     display: flex;
-    justify-content: flex-start; 
+    justify-content: flex-start;
+    position: absolute;
+    top: 40px;
+    left: 40px;
 
 }
 
@@ -62,6 +79,12 @@
     border-radius: 8px;
     padding: 0.4rem;
     width: 32px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.Profile-link:hover{
+    background-color: #f1f1f1;
 }
 
 .Profile-label {
@@ -69,17 +92,21 @@
     flex-direction: column;
     color: var(--color-text-s);
     margin-bottom: 0.3rem;
+    font-weight: 500;
 }
 
 .Profile-input {
     padding: 0.75rem 1rem;
     border: 1px solid #ccc;
-    border-radius: 0.75rem;
+    border-radius: 8px;
     transition: border 0.3s ease-in-out;
+    transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
+
 
 .Profile-input:focus {
     border-color: #5b9df9;
+    box-shadow: var(--box-shadow) ;
 }
 
 .Profile-button {
@@ -87,38 +114,107 @@
     background-color: #5b9df9;
     color: white;
     border: none;
-    border-radius: 0.75rem;
+    border-radius: 8px;
     cursor: pointer;
-    margin-top: 1rem;
+    
     transition: background-color 0.3s ease-in-out;
 
 }
 
 .Profile-button:hover {
-    background-color: #407ee7
+    background-color: #407ee7;
+}
+
+.Profile-button--cancel{
+    background-color: #f5867f;
+    color: white;
+    transition: background-color 0.3s ease-in-out;
+}
+.Profile-button--cancel:hover{
+    background-color: #f44336;
+}
+
+.Profile-button--pass{
+    margin-top: 2rem;
+    background-color: #f4a261;
+    color: white;
+    width: 100%;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.Profile-button--pass:hover{
+    background-color: #e76f51;
+}
+.Profile-button--passConfirm{
+    background-color: #2a9d8f;
+    color: white;
+    width: 100%;
+    transition: background-color 0.3s ease-in-out;
+
+}
+
+.Profile-button--passConfirm:hover{
+    background-color: #198276;
 }
 
 .Profile-logout {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
     background: none;
     border: none;
     color: var(--color-text-t);
     cursor: pointer;
     text-align: center;
+    font-size: 1rem;
 }
-
+.Profile-logout:hover{
+    color: #5b9df9;
+}
 .Policy-links{
     width: 100%;
     display: flex;
     justify-content: center;
     gap: 28px;
+    margin-top: 2rem;
 }
 
 .Policy-link{
     color: #407ee7;
+    font-size: 1rem;
+    font-weight: 500;
     transition: color 0.4s ease-in-out;
 }
 
 .Policy-link:hover{
+    color: var(--color-text-s);
+}
+
+.Profile-error{
+    color: #f44336;
+    font-size: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.Profile-info{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    color: var(--color-text-p);
+}
+
+.Profile-name,.Profile-email{
+    background-color: #f9f9f9;
+    padding: var(--btn-padding);
+    border-radius: 8px;
+    border: 1px solid #e0e0e0;
+    font-weight: 500;
+    
+}
+
+.Profile-name strong,.Profile-email strong{
+    font-weight: 700;
+    margin-right: 0.5rem;
     color: var(--color-text-s);
 }
