--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -295,3 +295,40 @@
     left: 0.8rem;
     width: 40px;
 }
+
+.Actividades-filtros{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1.5rem 0;
+}
+
+.Actividad-filtro{
+padding: var(--btn-padding);
+border-radius: var(--btn-radius);
+font-size: 16px;
+font-weight: 500;
+border: none;
+cursor: pointer;
+color: white;
+background-color: transparent;
+border: 2px solid transparent;
+color: var(--color-text-s);
+}
+
+.Actividad-filtro.activo{
+    background: linear-gradient(45deg, #f06b6b, #ff7f50);
+    color: white;
+    border: 3px solid #ff7f50;
+    box-shadow: var(--box-shadow);
+}
+.Actividad-filtro:not(.activo){
+    background-color: transparent;
+    border-color: rgba(0, 0, 0, 0.1);
+    opacity: 0.7;
+}
+.Actividad-filtro:hover{
+    opacity: 0.9;
+}
+
