--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -187,6 +187,7 @@
 
 .CalendarForm {
     /* position: absolute; */
+    
     margin: 20px auto;
     bottom: 0;
     left: 0;
@@ -206,6 +207,7 @@
 .CalendarForm-input,
 .CalendarForm-textarea,
 .CalendarForm-select {
+    font-family: var(--font-main);
     border: none;
     border-radius: 14px;
     padding: var(--btn-padding);
