--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -33,6 +33,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: var(--font-main);
 }
 
 a {
@@ -82,6 +83,7 @@ button:active{
   font-family: var(--font-main);
 
 }
+
 
 .Body::-webkit-scrollbar,
 html::-webkit-scrollbar {
