--- a/front-tourist-activities/src/css/components/footer.css
+++ b/front-tourist-activities/src/css/components/footer.css
@@ -14,7 +14,7 @@
     height: 10vh;
     /* color entre los dos colores linear gradient del fondo principal */
     background-color: #fbfdfd;
-    
+
 }
 
 .Footer-nav {
@@ -41,14 +41,15 @@
 
 .Footer-link.active {
     opacity: 1;
-    
+
 }
+
 /* .Footer-link.hover {
     opacity: 1;
     
 } */
 
-.Footer-imgLink{
+.Footer-imgLink {
     width: 25px;
 }
 
@@ -71,13 +72,16 @@
     transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
-.Footer-div:hover{
+.Footer-divBtn:hover {
+    box-shadow: 0 12px 16px rgba(121, 83, 183, 0.6);
     transform: translate(-50%, -55%) scale(1.05);
-    box-shadow: 0 14px 12px rgba(183, 144, 83, 0.6);
+
 }
 
-.Footer-div:active{
-    transform: translate(-50% ,-50%) scale(0.95);
+
+
+.Footer-divBtn:active {
+    transform: translate(-50%, -50%) scale(0.95);
 }
 
 /* MOTION con los DOTS */
