--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     width: 90%;
+    margin: 24px 0;
 }
 
 .CalendarHeader-btn {
@@ -10,7 +11,7 @@
     height: 60px;
     padding: 1rem;
     border-radius: 50%;
-    background-color: rgb(177 77 77);
+    background-color: #E57373;
     border: none;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     display: flex;
@@ -33,6 +34,7 @@
     max-width: 100vw;
     scrollbar-width: none;
     scroll-behavior: smooth;
+    gap: 10px;
 }
 
 .Slider-btn {
@@ -42,24 +44,29 @@
     border-radius: 20px;
     height: 60px;
     width: 40px;
-    background-color: azure;
-    transition: background-color 0.3s ease-in-out;
+    background-color: #E0F2F1;
+    transition: background-color 0.1s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    border: 2px solid white;
+    box-shadow: 0 0 0 3px #A7C7E7;
+    /* simula otro borde con color */
 
+}
+
+.Slider-btn:hover {
+    background-color: rgb(182, 199, 224);
 }
 
 .Selected-day {
     color: rgb(255, 255, 255);
     font-weight: 700;
-    background-color: rgb(96, 157, 248);
+    background: linear-gradient(135deg, #6a93ff, #a88fff);
 }
 
-.Slider-btn:hover {
-    background-color: rgb(117, 147, 193);
-}
+
 
 
 /* Bloque de horas y actividades */
@@ -187,7 +194,7 @@
 
 .CalendarForm {
     /* position: absolute; */
-    
+
     margin: 20px auto;
     bottom: 0;
     left: 0;
@@ -213,13 +220,15 @@
     padding: var(--btn-padding);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
-    appearance: none; /* <- Esto desactiva el estilo nativo */
+    appearance: none;
+    /* <- Esto desactiva el estilo nativo */
 
 }
+
 .CalendarForm-input:focus,
 .CalendarForm-textarea:focus,
-.CalendarForm-select:focus{
-border-color: #4b5bb2;
+.CalendarForm-select:focus {
+    border-color: #4b5bb2;
 }
 
 .CalendarForm-btn {
@@ -232,11 +241,12 @@ border-color: #4b5bb2;
 
 }
 
-.CalendarForm-btn--confirm{
+.CalendarForm-btn--confirm {
     background-color: #4b964d;
 
 }
-.CalendarForm-btn--cancel{
+
+.CalendarForm-btn--cancel {
     background-color: #db2a41;
 
 }
@@ -254,7 +264,7 @@ border-color: #4b5bb2;
     width: 80%;
 }
 
-.ActividadSeleccionada-close{
+.ActividadSeleccionada-close {
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -274,7 +284,7 @@ border-color: #4b5bb2;
     transition: background-color 0.5s ease-in-out;
 }
 
-.ActividadSeleccionada-close:hover{
+.ActividadSeleccionada-close:hover {
     background-color: #fff;
 }
 
@@ -334,9 +344,7 @@ border-color: #4b5bb2;
 
 
 /* personalizacion calendario */
-.react-calendar__tile--hasActive{
+.react-calendar__tile--hasActive {
     color: white;
     /* background: #4b5bb2; */
 }
-
-
