--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -114,23 +114,18 @@
     color: #fff;
     font-weight: 600;
     border-radius: var(--btn-radius);
-    border: none;
+    
     box-shadow: var(--box-shadow);
     font-size: 1rem;
     transition: background-color 0.6s ease-in-out;
     cursor: pointer;
-}
-
-.Login-btn {
+    border: 4px solid #2c5e939e;
     background-color: #4f7cac;
 }
 
-.Register-btn {
-    background-color: #4f7cac;
-}
 
 .Login-btn:hover {
-    background-color: #7db2cb;
+    background-color: #5899b8;
 }
 
 .Register-btn:hover {
