--- a/front-tourist-activities/src/css/components/header.css
+++ b/front-tourist-activities/src/css/components/header.css
@@ -33,3 +33,16 @@
     width: 26px;
     height: auto;
 }
+
+
+@media (min-width: 768px) {
+    .Header{
+        width: 80%;
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 1024px) {
+
+
+}
