--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -12,7 +12,7 @@
   --btn-padding: 0.75rem 1rem;
   --btn-radius: 18px;
 
-  --box-shadow: 0 8px 24px rgba(0,0,0, 0.08);
+  --box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
 
   --btn-bg-color: linear-gradient(135deg, #4fd1c5, #38b2ac);
   --btn-text-light: #fff;
@@ -117,19 +117,20 @@ html {
   align-items: center;
 }
 
-.Error{
+.Error {
   position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column ;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
 }
-.Error-link{
+
+.Error-link {
   margin-top: 20px;
   font-size: 600;
   color: white;
@@ -137,4 +138,19 @@ html {
   background-color: var(--color-act-pasada);
   border: 4px solid #c72b2b;
   border-radius: var(--btn-radius);
+}
+
+@media (min-width: 768px) {
+
+  .react-calendar {
+    min-width: 500px;
+    margin: 30px 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .react-calendar {
+    min-width: 600px;
+    margin: 40px 0;
+  }
 }
